--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "electron src/electron.js",
-    "build": "tsc src/electron.ts",
+    "start": "npm run build && electron ./src/electron.js",
+    "build": "webpack --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "electron": "^27.0.4",
-    "typescript": "^5.2.2"
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
