--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "diamond-embroider-calculator",
+  "name": "diamond-embroidery-calculator",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Diamond embroidery calculator",
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Stanislav Torman",
+  "license": "MIT",
+  "main": "prod/electron.js",
   "scripts": {
     "start": "npm run build-dev && electron ./build/electron.js",
     "build-dev": "webpack --config ./webpack.config.js",
     "build-prod": "webpack --config ./webpack.config.js --node-env=production",
+    "build-setup": "npm run build-prod && electron-builder build",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "build": {
+    "appId": "Diamond embroidery calculator",
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "prod/assets/diamond.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "installerIcon": "prod/assets/diamond.ico",
+      "uninstallerIcon": "prod/assets/diamond.ico",
+      "uninstallDisplayName": "Diamond embroidery calculator",
+      "license": "prod/assets/license.md",
+      "allowToChangeInstallationDirectory": true
+    }
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -18,6 +37,9 @@
     "bootstrap": "^5.3.2",
     "css-loader": "^6.8.1",
     "electron": "^27.0.4",
+    "electron-builder": "^24.6.4",
+    "electron-log": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "react": "^18.2.0",
