* added window title panel with functionality * added options page with switch theme functionality

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "keywords": [],
   "author": "Stanislav Torman",
   "license": "MIT",
-  "main": "prod/electron.js",
+  "main": "prod/main.js",
   "scripts": {
-    "start": "npm run build-dev && electron ./build/electron.js",
-    "build-dev": "webpack --config ./webpack.config.js",
-    "build-prod": "webpack --config ./webpack.config.js --node-env=production",
+    "start": "npm run build-dev && electron ./build/main.js",
+    "build-dev": "npm run clean-dev && webpack --config ./webpack.config.js",
+    "build-prod": "npm run clean-prod && webpack --config ./webpack.config.js --node-env=production",
     "build-setup": "npm run build-prod && electron-builder build",
+    "clean-dev": "node -e \"require('fs-extra').emptyDir('build');\"",
+    "clean-prod": "node -e \"require('fs-extra').emptyDir('prod');\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "build": {
@@ -35,12 +37,16 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "css-loader": "^6.8.1",
     "electron": "^27.0.4",
     "electron-builder": "^24.6.4",
     "electron-log": "^5.0.1",
+    "electron-store": "^8.1.0",
+    "electron-typescript-ipc": "^3.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
