--- a/package.json
+++ b/package.json
@@ -61,8 +61,12 @@
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "overrides": {
+    "got": "^11.8.3",
+    "semver-regex": "^3.1.3"
   }
 }
