--- a/package.json
+++ b/package.json
@@ -40,30 +40,32 @@
     }
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.2",
-    "bootswatch": "^5.3.2",
     "css-loader": "^6.8.1",
     "electron": "^27.0.4",
     "electron-builder": "^24.6.4",
-    "electron-log": "^5.0.1",
-    "electron-store": "^8.1.0",
-    "electron-typescript-ipc": "^3.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
-    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "ts-loader": "^9.5.0",
     "typescript": "^5.4.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "bootswatch": "^5.3.3",
+    "electron-log": "^5.1.2",
+    "electron-store": "^8.2.0",
+    "electron-typescript-ipc": "^3.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.2.0",
+    "sass": "^1.75.0"
   },
   "overrides": {
     "got": "^11.8.3",
