--- a/package.json
+++ b/package.json
@@ -40,12 +40,18 @@
     }
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "css-loader": "^6.8.1",
     "electron": "^27.0.4",
     "electron-builder": "^24.6.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "image-webpack-loader": "^8.1.0",
+    "image-minimizer-webpack-plugin": "^4.0.0",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
     "mini-css-extract-plugin": "^2.7.6",
     "sass-loader": "^13.3.2",
     "ts-loader": "^9.5.0",
@@ -54,6 +60,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.16.0",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "bootstrap": "^5.3.3",
@@ -62,10 +69,13 @@
     "electron-log": "^5.1.2",
     "electron-store": "^8.2.0",
     "electron-typescript-ipc": "^3.0.0",
+    "formik": "^2.4.6",
+    "material-react-table": "^2.13.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "yup": "^1.4.0"
   },
   "overrides": {
     "got": "^11.8.3",
