--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "sass": "^1.75.0",
+    "short-unique-id": "^5.2.0",
     "yup": "^1.4.0"
   },
   "overrides": {
