--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
     "sass": "^1.75.0",
     "short-unique-id": "^5.2.0",
     "yup": "^1.4.0"
