* Removed package "electron-typescript-ipc" - we use ipc from "electron" package * Small UI changes for "ImageDropzone" component * Added UI for error showing in "eventMessage" component * Added backend logic for picture create, update, remove * Added backend logic for Picture image file saving and removing * Code refactoring

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,8 @@
       "@hooks/": ["app/utils/hooks/"],
       "@hooks/*": ["app/utils/hooks/*"],
 
+      "@electron": ["electron/"],
+      "@electron/*": ["electron/*"],
       "@dataAccess": ["electron/dataAccess"],
       "@dataAccess/*": ["electron/dataAccess/*"],
       "@general": ["electron/general"],
