--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@tanstack/react-table": "^8.16.0",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/react-text-mask": "^5.4.14",
+    "@types/text-mask-addons": "^3.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootswatch": "^5.3.3",
@@ -74,8 +76,10 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-number-format": "^5.3.4",
+    "react-text-mask": "^5.5.0",
     "sass": "^1.75.0",
     "short-unique-id": "^5.2.0",
+    "text-mask-addons": "^3.8.0",
     "yup": "^1.4.0"
   },
   "overrides": {
