--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-dropzone": "^14.2.3",
     "react-number-format": "^5.3.4",
     "react-text-mask": "^5.5.0",
+    "rxjs": "^7.8.1",
     "sass": "^1.75.0",
     "short-unique-id": "^5.2.0",
     "text-mask-addons": "^3.8.0",
