--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -11,7 +11,7 @@
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
     /* Language and Environment */
-    "target": "es2016",
+    "target": "ES6",//"es2016",
     /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "jsx": "react",
@@ -27,12 +27,12 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
     /* Modules */
-    "module": "commonjs",
+    "module": "commonjs", //"ES6",
     /* Specify what module code is generated. */
     "rootDir": ".",
     /* Specify the root folder within your source files. */
     //"moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "src",
+    "baseUrl": "./src",
     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@assets/": ["assets/"],
@@ -47,7 +47,9 @@
       "@utils/*": ["app/utils/*"],
       "@hooks/": ["app/utils/hooks/"],
       "@hooks/*": ["app/utils/hooks/*"],
-
+      
+      "@electron": ["electron/"],
+      "@electron/*": ["electron/*"],
       "@dataAccess": ["electron/dataAccess"],
       "@dataAccess/*": ["electron/dataAccess/*"],
       "@general": ["electron/general"],
