* Added application update functionality for production

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diamond-embroidery-calculator",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Diamond embroidery calculator",
   "keywords": [],
   "author": "Stanislav Torman",
@@ -20,6 +20,11 @@
     "build-thems-dev": "webpack --config ./webpack.config.js --env development build_themes --progress",
     "build-thems-prod": "webpack --config ./webpack.config.js --env production build_themes --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": "https://github.com/stanislav0305/Diamond-Embroidery-Calculator",
+  "publish": {
+    "provider": "github",
+    "releaseType": "release"
   },
   "build": {
     "appId": "Diamond embroidery calculator",
@@ -64,6 +69,7 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.16.0",
+    "@types/electron-progressbar": "^1.2.6",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@types/react-text-mask": "^5.4.14",
@@ -72,6 +78,7 @@
     "bootstrap-icons": "^1.11.3",
     "bootswatch": "^5.3.3",
     "electron-log": "^5.1.2",
+    "electron-progressbar": "^2.2.1",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.2.1",
     "formik": "^2.4.6",
