--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diamond-embroidery-calculator",
-  "version": "0.3.0",
+  "version": "1.0.6",
   "description": "Diamond embroidery calculator",
   "keywords": [],
   "author": "Stanislav Torman",
@@ -28,7 +28,8 @@
   },
   "build": {
     "appId": "Diamond embroidery calculator",
-    "productName": "Diamond embroidery calculator",
+    "productName": "Diamond-embroidery-calculator",
+    "artifactName": "${productName}-Setup-${version}.${ext}",
     "win": {
       "target": [
         "nsis"
