--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diamond-embroidery-calculator",
-  "version": "1.0.8",
+  "version": "1.1.8",
   "description": "Diamond embroidery calculator",
   "keywords": [],
   "author": "Stanislav Torman",
@@ -89,6 +89,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-number-format": "^5.3.4",
+    "react-router-dom": "^6.24.0",
     "react-text-mask": "^5.5.0",
     "rxjs": "^7.8.1",
     "sass": "^1.75.0",
