--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "author": "Stanislav Torman",
   "license": "MIT",
   "main": "prod/main.js",
-  "!comment": "for dev firstly run build-thems-dev, after that run start",
+  "!comment": "for dev firstly run build-themes-dev, after that run start",
   "scripts": {
     "start-only": "electron ./build/main.js",
     "start": "npm run build-dev && electron ./build/main.js",
     "build-setup": "npm run build-prod && electron-builder build",
-    "build-dev": "npm run clean-dev && webpack --config ./webpack.config.js --env development --progress && npm run copy-thems-dev",
-    "build-prod": "npm run clean-prod && npm run build-thems-prod && webpack --config ./webpack.config.js --env production --progress && npm run copy-thems-prod",
+    "build-dev": "npm run clean-dev && webpack --config ./webpack.config.js --env development --progress && npm run copy-themes-dev",
+    "build-prod": "npm run clean-prod && npm run build-themes-prod && webpack --config ./webpack.config.js --env production --progress && npm run copy-themes-prod",
     "clean-dev": "node -e \"require('fs-extra').emptyDir('build');\"",
     "clean-prod": "node -e \"require('fs-extra').emptyDir('prod');\"",
-    "copy-thems-dev": "node -e \"require('fs-extra').copy('build-themes', 'build');\"",
-    "copy-thems-prod": "node -e \"require('fs-extra').copy('build-themes-prod', 'prod');\"",
-    "build-thems-dev": "webpack --config ./webpack.config.js --env development build_themes --progress",
-    "build-thems-prod": "webpack --config ./webpack.config.js --env production build_themes --progress",
+    "copy-themes-dev": "node -e \"require('fs-extra').copy('build-themes', 'build');\"",
+    "copy-themes-prod": "node -e \"require('fs-extra').copy('build-themes-prod', 'prod');\"",
+    "build-themes-dev": "webpack --config ./webpack.config.js --env development build_themes --progress",
+    "build-themes-prod": "webpack --config ./webpack.config.js --env production build_themes --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "npm-clear-cache": "npm cache clean --force",
     "better-audit": "better-npm-audit audit"
